--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Trang liên hệ</h1>
+    <p>Đây là trang liên hệ của cửa hàng trực tuyến.</p>
+    <h3>Số điện thoại: 0123456789</h3>
+    <h3>Email: contact@shoponline.com</h3>
+    <h3>Địa chỉ: 123 Đường ABC, Quận XYZ, TP. HCM</h3>
 </body>
 </html>
